Initial Daily Streak update

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
       <p>🔄 Tab Switches: <span id="switches">0</span></p>
       <p>🧠 Focus Score: <span id="focus">100</span>%</p>
       <p>⚠️ Addiction Score: <span id="addiction">0</span>%</p>
+        <p>🔥 Daily Streak: <span id="streak">0</span></p>
+        <div class="graph">
+          <div class="bar" id="barTime"></div>
+          <div class="bar" id="barSwitch"></div>
+          <div class="bar" id="barAddiction"></div>
+        </div>
+        <p id="message">Good job! 👍</p>
     </div>
 
     <button onclick="resetTracker()">Reset Session</button>
